# email_automator

./: .env  .gitignore  README.md  pyproject.toml
src/email_automator/: main.py
src/email_automator/config/: settings.py
src/email_automator/services/: auto_login.py  browser.py  capture.py  email_service.py  pdf_format.py  pdf_service.py  scanner.py
