[project]
name = "email-automator"
version = "0.1.0"
description = ""
authors = [
    {name = "DamianEA",email = "angeldamianmadrigal@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "o365 (>=2.1.8,<3.0.0)",
    "weasyprint (>=68.0,<69.0)",
    "google-api-python-client (>=2.188.0,<3.0.0)",
    "google-auth-oauthlib (>=1.2.4,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "imap-tools (>=1.11.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "email_automator", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
